--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,4 @@ version: '3.3'
 services:
   web:
     build: .
-    image: jamaicandevelopers/laravel-nginx-apline
+    image: jamaicandevelopers/laravel-nginx-apline:php7.2
